2023-12-02 JTC: Fixes button positions on mobile responsive view.

--- a/public/css/dapp-claim.css
+++ b/public/css/dapp-claim.css
@@ -259,8 +259,8 @@
 }
 
 @media only screen and (min-width: 0px) and (max-width: 480px) {
-
     .logo {
+        margin: 20px;
         width: 8% !important;
         height: 8% !important;
     }
@@ -289,31 +289,28 @@
     }
 
     .connect-wallet {
-        margin-left: 25%;
-        height: 45px;
+        float: none;
+        height: auto;
         width: auto;
-        padding: 10px 20px;
+        margin: auto;
     }
 
     .claim-button {
-        float: left;
-        margin-top: 0;
-        margin-bottom: 20px;
-        margin-left: 20px;
-        height: 45px;
-        width: 40%;
-        padding: 10px 20px;
+        padding: 20px;
+        float: none;
+        height: auto;
+        width: auto;
+        min-width: 178px;
+        margin: auto;
     }
 
-
     .claim-fd-button {
-        float: left;
-        margin-top: 0;
-        margin-left: 20px;
-        margin-bottom: 20px;
-        height: 45px;
-        width: 40%;
-        padding: 10px 20px;
+        padding: 20px;
+        float: none;
+        height: auto;
+        width: auto;
+        min-width: 178px;
+        margin: auto;
     }
 
     .rewards {
@@ -336,7 +333,6 @@
 }
 
 @media only screen and (min-width: 480px) and (max-width: 767px) {
-
     .logo {
         width: 8% !important;
         height: 8% !important;
@@ -368,7 +364,6 @@
         width: 40% !important;
         padding: 10px 20px !important;
     }
-
 
     .claim-fd-button {
         float: left;
@@ -405,7 +400,6 @@
 }
 
 @media (min-width: 768px) and (max-width: 979px) {
-
     .wrap-box-ftso {
         height: 9rem;
         margin: 10px 0 0;
