--- a/public/css/dapp-delegate.css
+++ b/public/css/dapp-delegate.css
@@ -172,21 +172,16 @@
 }
 
 @media only screen and (min-width: 0px) and (max-width: 480px) {
-
-    .connect-wallet {
-        float: left;
-    }
-
     .amount {
         width: 15%!important;
     }
 
     .claim-button {
-        float: right;
-        padding: 10px;
-        margin: 10px;
-        height: 45px;
-        width: 40%;
+        float: none;
+        height: auto;
+        width: auto;
+        min-width: 178px;
+        margin: auto;
     }
 
     .selected-ftso {
@@ -210,12 +205,6 @@
 }
 
 @media only screen and (min-width: 480px) and (max-width: 767px) {
-
-    .connect-wallet {
-        float: left;
-        margin: 10px;
-    }
-
     .amount {
         width: 15%!important;
     }
@@ -254,12 +243,6 @@
 }
 
 @media (min-width: 768px) and (max-width: 979px) {
-
-    .connect-wallet {
-        float: left;
-        margin: 10px;
-    }
-
     .wrap-box-ftso {
         height: 9rem;
         margin: 10px 0 0;
