--- a/public/css/dapp-wrap.css
+++ b/public/css/dapp-wrap.css
@@ -145,12 +145,12 @@ a:hover, a:active, a:focus {
 }
 
 @media only screen and (min-width: 0px) and (max-width: 480px) {
-
     .wrap-button {
-        padding: 10px;
-        height: 45px;
-        width: 40%;
-        margin: 10px;
+        float: none;
+        height: auto;
+        width: auto;
+        min-width: 178px;
+        margin: auto;
     }
 
     .addr-wrap {
